<resources>
    <string name="app_name">APP NOTES ByJST®2021</string>
    <string name="tab_edit">EDIT/NEW</string>
    <string name="tab_list">LIST</string>
    <string name="tab_config">CONFIG</string>
    <!-- TODO: TEXTOS Y HINT DE LOS COMPONENTES -->
    <string name="hint_titulo">TITULO NOTA</string>
    <string name="hint_coment">ANOTACIONES</string>
    <string name="btn_save">GUARDAR</string>
    <string name="btn_reset">RESETEAR CONFIGURACION</string>
    <string name="titulo_list">LISTA NOTAS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo_config">CONTROL PANEL</string>
    <string name="createdate">CREADO:</string>
    <string name="updatedate">MODIFICADO:</string>

    <string name="colorfuente1">COLOR TITULO: </string>
    <string name="colorfuente2">COLOR CONTENIDO: </string>
    <string name="colorfuente3">COLOR PRINCIPAL: </string>
    <string name="colorfuente4">COLOR SECUNDARIO: </string>

    <string name="acercade">ACERCA DE NOSOTROS</string>
    <string name="autores">-AUTORES-</string>
    <string name="autor1">Saúl Caballero</string>
    <string name="autor2">José Ignacio Martínez</string>
    <string name="observaciones">
        Apliciación creada para el DAM2. Curso de Programación Multimedia y Móviles de 2021 en el IES Tubalcaín de Tarazona. Desarrollada en Android Studio 4.1.1.
    </string>
    <string name="cerrar">CLOSE</string>

</resources>