<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".EditFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:hint="@string/hint_titulo"
        android:maxLength="25"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editContent"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="20dp"
                android:background="@color/azul_200"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hint_coment"
                android:inputType="textMultiLine"
                android:maxLength="512"
                android:shadowColor="@color/black" />
        </LinearLayout>
    </ScrollView>



    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/fondo_botones"
        android:text="@string/btn_save" />




</LinearLayout>