<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".ConfigFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/editTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:maxLength="25"
        android:text="@string/titulo_config"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_TitleColour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/colorfuente1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitle" />

    <TextView
        android:id="@+id/tv_ContentColour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/colorfuente2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_TitleColour" />

    <TextView
        android:id="@+id/tv_SecondaryColour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/colorfuente4"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_PrimaryColour" />

    <TextView
        android:id="@+id/tv_PrimaryColour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/colorfuente3"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ContentColour" />

    <Button
        android:id="@+id/btnTitleColour"
        android:layout_width="148dp"
        android:layout_height="41dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/titleColour"
        android:onClick="onClic"
        app:layout_constraintStart_toEndOf="@+id/tv_TitleColour"
        app:layout_constraintTop_toBottomOf="@+id/editTitle" />

    <Button
        android:id="@+id/btnContentColour"
        android:layout_width="148dp"
        android:layout_height="41dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/textColor"
        android:onClick="onClic"
        app:layout_constraintStart_toEndOf="@+id/tv_ContentColour"
        app:layout_constraintTop_toBottomOf="@+id/btnTitleColour" />

    <Button
        android:id="@+id/btnPrimaryColour"
        android:layout_width="148dp"
        android:layout_height="41dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/primary_500"
        android:onClick="onClic"
        app:layout_constraintStart_toEndOf="@+id/tv_PrimaryColour"
        app:layout_constraintTop_toBottomOf="@+id/btnContentColour" />

    <Button
        android:id="@+id/btnSecondaryColour"
        android:layout_width="148dp"
        android:layout_height="41dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="29dp"
        android:backgroundTint="@color/primary_200"
        android:onClick="onClic"
        app:layout_constraintStart_toEndOf="@+id/tv_SecondaryColour"
        app:layout_constraintTop_toBottomOf="@+id/btnPrimaryColour" />


</androidx.constraintlayout.widget.ConstraintLayout>